--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,3 +1,131 @@
 @charset "UTF-8";
 @import "reset";
 @import url('https://fonts.googleapis.com/css2?family=Alegreya+Sans+SC:wght@100&display=swap');
+
+main {
+   width: 100%;
+   height: 100vh;
+   display: flex;
+
+   header {
+      width: 20%;
+      height: 100%;
+      padding: 10vh 5vw;
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: center;
+      align-content: space-between;
+
+      h1 {
+         color: #fff;
+         display: flex;
+         flex-wrap: wrap;
+         justify-content: center;
+         align-content: center;
+         i {
+            font-size: 5vw;
+            margin-bottom: 15px;
+         }
+         span {
+            width: 100%;
+            font: normal 0.8vw/1 "arial";
+            text-align: center;
+         }
+      }
+
+      p {
+         font: normal 12px/1.2 "arial";
+         color: #888;
+         text-align: center;
+      }
+   }
+   section {
+      width: 80%;
+      height: 100%;
+      padding-top: 10vh;
+      display: flex;
+
+      article {
+         flex: 1;
+         transition: 0.5s;
+         position: relative;
+
+         &::before {
+            content: "";
+            display: block;
+            width: 80%;
+            height: 95%;
+            position: absolute;
+            top: 0px;
+            left: -100px;
+            opacity: 0;
+            background: #444;
+            box-shadow: 10px 10px 20px rgba(0,0,0,0.1);
+            transition: 1s;
+         }
+
+         .inner {
+            width: 100%;
+            height: 100%;
+            position: relative;
+            display: flex;
+            flex-wrap: wrap;
+            align-content: space-between;
+            padding: 50px 30px 100px;
+
+            figure {
+               width: 100%;
+               height: 15vh;
+               overflow: hidden;
+               transition: 0.5s;
+               position: relative;
+               top: 0px;
+               box-shadow: 10px 10px 30px rgba(0,0,0,.1);
+               filter: saturate(0.2);
+
+               video {
+                  width: 100%;
+                  height: 100%;
+                  object-fit: cover;
+               }
+            }
+         }
+
+         &:hover {
+            flex:1.3;
+
+            &::before {
+               left: 0px;
+               opacity: 1;
+            }
+
+            .inner {
+               figure {
+                  height: 20vh;
+                  top:25px;
+                  filter: saturate(1.2);
+               }
+            }
+         }
+      }
+   }
+
+   nav {
+      position: absolute;
+      top: 4vh;
+      right: 5vw;
+
+      ul {
+         display: flex;
+
+         li {
+            margin: 15px;
+
+            a {
+               font-size: 18px;
+               color: #bbb;
+            }
+         }
+      }
+   }
+}
