--- a/css/style.css
+++ b/css/style.css
@@ -85,6 +85,29 @@ main section article .inner {
   align-content: space-between;
   padding: 50px 30px 100px;
 }
+main section article .inner .txt {
+  padding-top: 90px;
+  transition: 1s;
+}
+main section article .inner .txt h2 {
+  font: normal 2vw/1 "Alegreya Sans SC";
+  color: #fff;
+  margin-bottom: 40px;
+  transition: 1s;
+}
+main section article .inner .txt h2::after {
+  content: "";
+  display: block;
+  width: 40px;
+  height: 2px;
+  background: #777;
+  margin-top: 20px;
+  transition: 1.5s;
+}
+main section article .inner .txt p {
+  font: 14px/1.4 "arial";
+  color: #777;
+}
 main section article .inner figure {
   width: 100%;
   height: 15vh;
@@ -106,6 +129,16 @@ main section article:hover {
 main section article:hover::before {
   left: 0px;
   opacity: 1;
+}
+main section article:hover .inner .txt {
+  padding-top: 20px;
+}
+main section article:hover .inner .txt h2 {
+  font-size: 5vw;
+}
+main section article:hover .inner .txt h2::after {
+  width: 120px;
+  background: orange;
 }
 main section article:hover .inner figure {
   height: 20vh;
